--- a/config/extra/httpd-vhosts.conf
+++ b/config/extra/httpd-vhosts.conf
@@ -36,5 +36,19 @@ CustomLog "logs/wordpress2.de-access_log" common
 
 </VirtualHost>
 
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
 
+<VirtualHost *:80>
+ProxyPreserveHost On
+ProxyPass / http://172.31.34.60:84/
+ProxyPassReverse / http://172.31.34.60:84/
+ServerName wordpress4.de
+ErrorLog "logs/wordpress2.de-error_log"
+CustomLog "logs/wordpress2.de-access_log" common
+
+
+</VirtualHost>
+
+
+
+# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+# Hello World
